fix flex text-clipping

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -96,7 +96,7 @@ img#one-click-img {
     }
 }
 
-@media (min-width: 1025px) and (max-width: 1280px) {
+@media (max-width: 1800px) {
     .flexbox {
         display: flex;
         flex-wrap: wrap;
